--- a/playground/js/parcel2-client-server/client/src/index.html
+++ b/playground/js/parcel2-client-server/client/src/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>KriterisEngine3</title>
+    <title>Minimalist React-Redux App</title>
 
   </head>
-  <body style="padding: 0px; margin: 0px">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="root" id="root"></div>
   </body>
-  <script src="./index.tsx"></script>
+  <script type="module" src="./index.tsx"></script>
 </html>
