--- a/playground/js/JsSpreadsheetDOM/index.html
+++ b/playground/js/JsSpreadsheetDOM/index.html
@@ -7,7 +7,15 @@
 </head>
 <body style="background-color: rgb(30,30,30); color: rgba(255,0,0,0.8);">
 <div id="app"></div>
-<script  src="https://unpkg.com/cellx@1.10.30/dist/cellx.umd.js"></script>
-<script type="module" src="main.js"></script>
+<div id="app2"></div>
+<script src="https://unpkg.com/cellx@1.10.30/dist/cellx.umd.js"></script>
+<script src="arrow-js.js"></script>
+<script src="https://cdn.tailwindcss.com"></script>
+<script src="https://unpkg.com/preact"></script>
+<!--<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin</script>-->
+<!--<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>-->
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/cyclow@0.5.3/dist/cyclow.min.js"></script>-->
+<script type="text/babel" src="main.js"></script>
 </body>
 </html>
