--- a/playground/js/JsSpreadsheetDOM/index.html
+++ b/playground/js/JsSpreadsheetDOM/index.html
@@ -11,11 +11,11 @@
 <script src="https://unpkg.com/cellx@1.10.30/dist/cellx.umd.js"></script>
 <script src="arrow-js.js"></script>
 <script src="https://cdn.tailwindcss.com"></script>
-<script src="https://unpkg.com/preact"></script>
+<!--<script src="https://unpkg.com/preact"></script>-->
 <!--<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin</script>-->
 <!--<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>-->
+<script src="https://cdn.jsdelivr.net/npm/cyclow@0.5.3/dist/cyclow.min.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-<!--<script src="https://cdn.jsdelivr.net/npm/cyclow@0.5.3/dist/cyclow.min.js"></script>-->
 <script type="text/babel" src="main.js"></script>
 </body>
 </html>
