--- a/playground/js/easyui/index.html
+++ b/playground/js/easyui/index.html
@@ -9,6 +9,8 @@
 <script src="arrow-js.js"></script>
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
 <script src="index.js" type="text/babel"></script>
+<script src="fre.js" type="text/javascript"></script>
 </body>
 </html>
