wow have almost reached inception

--- a/playground/js/JsSpreadsheetDOM/index.html
+++ b/playground/js/JsSpreadsheetDOM/index.html
@@ -5,16 +5,25 @@
     <title>Title</title>
 
 </head>
-<body style="background-color: rgb(30,30,30); color: rgba(255,0,0,0.8);">
+<body style="
+background-color: black;
+-webkit-filter: invert(100%);
+-moz-filter: invert(100%);
+-o-filter: invert(100%);
+-ms-filter: invert(100%);">
 <div id="app"></div>
 <div id="app2"></div>
+
 <script src="https://unpkg.com/cellx@1.10.30/dist/cellx.umd.js"></script>
-<script src="arrow-js.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/fast-json-patch/3.1.1/fast-json-patch.min.js"></script>-->
+
 <script src="https://cdn.tailwindcss.com"></script>
 <!--<script src="https://unpkg.com/preact"></script>-->
 <!--<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin</script>-->
 <!--<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>-->
-<script src="https://cdn.jsdelivr.net/npm/cyclow@0.5.3/dist/cyclow.min.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/cyclow@0.5.3/dist/cyclow.min.js"></script>-->
+<script src="arrow-js.js"></script>
+<script src="https://unpkg.com/virtual-dom/dist/virtual-dom.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel" src="main.js"></script>
 </body>
