--- a/playground/js/JsSpreadsheetDOM/index.html
+++ b/playground/js/JsSpreadsheetDOM/index.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
+    <LINK href="main.css" rel="stylesheet" type="text/css">
 </head>
-<body style="
-background-color: black;
--webkit-filter: invert(100%);
--moz-filter: invert(100%);
--o-filter: invert(100%);
--ms-filter: invert(100%);">
+<body style="">
 <div id="app"></div>
 <div id="app2"></div>
 
