--- a/playground/js/JsSpreadsheetDOM/index.html
+++ b/playground/js/JsSpreadsheetDOM/index.html
@@ -11,14 +11,22 @@
 
 <script src="https://unpkg.com/cellx@1.10.30/dist/cellx.umd.js"></script>
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/fast-json-patch/3.1.1/fast-json-patch.min.js"></script>-->
-
+<script type="module">
+    import flat from 'https://cdn.jsdelivr.net/npm/flat@5.0.2/+esm';
+    import * as arrowJs from 'https://cdn.jsdelivr.net/npm/@arrow-js/core@1.0.0-alpha.9/+esm';
+    import virtualDom from 'https://cdn.jsdelivr.net/npm/virtual-dom@2.1.1/+esm'
+    Object.assign(window,{
+        flat,
+        arrowJs,
+        virtualDom,
+    })
+</script>
 <script src="https://cdn.tailwindcss.com"></script>
 <!--<script src="https://unpkg.com/preact"></script>-->
 <!--<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin</script>-->
 <!--<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>-->
 <!--<script src="https://cdn.jsdelivr.net/npm/cyclow@0.5.3/dist/cyclow.min.js"></script>-->
-<script src="arrow-js.js"></script>
-<script src="https://unpkg.com/virtual-dom/dist/virtual-dom.js"></script>
+<!--<script src="arrow-js.js"></script>-->
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel" src="main.js"></script>
 </body>
