--- a/playground/js/JsSpreadsheetDOM/index.html
+++ b/playground/js/JsSpreadsheetDOM/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <LINK href="main.css" rel="stylesheet" type="text/css">
 </head>
-<body style="">
+<body style="min-height: 100vh; width: 100%; margin: 0px;padding: 0px">
 <div id="app"></div>
 <div id="app2"></div>
 
