add back custom arrow so i can hack in lifecycle

--- a/playground/js/JsSpreadsheetDOM/index.html
+++ b/playground/js/JsSpreadsheetDOM/index.html
@@ -42,15 +42,16 @@
     })
 
 </script>
+<script src="arrow-js.js"></script>
 <script type="module">
     import flat from 'https://cdn.jsdelivr.net/npm/flat@5.0.2/+esm';
-    import * as arrowJs from 'https://cdn.jsdelivr.net/npm/@arrow-js/core@1.0.0-alpha.9/+esm';
+    //import * as arrowJs from 'https://cdn.jsdelivr.net/npm/@arrow-js/core@1.0.0-alpha.9/+esm';
     import virtualDom from 'https://cdn.jsdelivr.net/npm/virtual-dom@2.1.1/+esm'
     import clonedeep from 'https://cdn.jsdelivr.net/npm/lodash.clonedeep@4.5.0/+esm'
     import cellx from 'https://cdn.jsdelivr.net/npm/cellx@1.10.30/+esm'
     Object.assign(window,{
         flat,
-        arrowJs,
+        //arrowJs,
         virtualDom,
         clonedeep,
         cellx,
