--- a/playground/js/VirtualizedDom/index.html
+++ b/playground/js/VirtualizedDom/index.html
@@ -19,131 +19,18 @@
 <span id="root"><x-cursor/></span>
 <template id="t-cursor">█</template>
 <template id="t-search">
-    <x-cell name="search"><x-cursor/></x-cell>
+    <x-cell name="search">
+        <x-cursor/>
+    </x-cell>
     <x-verb>"".toUpperCase</x-verb>
 </template>
-<template id ="t-cell">
-    <x-cell><x-cursor/></x-cell>
+<template id="t-cell">
+    <x-cell>
+        <x-cursor/>
+    </x-cell>
 </template>
 <template id="t-char"><x-char><x-slot-0/></x-char></template>
-<script type="module">
-    import foo from "./styles.css" with {type: "css"};
-    const dirty =[]
-    const letters = '`abcdefghijklmnopqrstuvwxyz0123456789!@#$%^&*()_+-=[]{}\\;:\'"<>,./?'
-    var mo = new MutationObserver((rec)=>{
-        console.log("derp",rec)
-        dirty.push(rec);
-    })
-    mo.observe(getEl('root'),{
-        subtree:true,
-        childList: true,
-        attributes: true,
-    })
-    function isX(el) {
-        return el.tagName.startsWith("X-")
-    }
-    function swap(el1,el2) {
-        var temp1 = document.createElement("span");
-        var temp2 = document.createElement('span')
-        replace(el1,temp1)
-        replace(el2,temp2)
-        replace(temp1,el2)
-        replace(temp2,el1)
-    }
-    const argStack ={}
-    document.addEventListener("keydown", (e) => {
-        if (e.altKey) {
-            return;
-        }
-
-        var key = e.key
-        if (key === "Control" || key === "Alt") {
-            return;
-        }
-        if (e.ctrlKey) {
-            key="Control+"+key
-        }
-        let cur = document.querySelector('x-cursor')
-
-        if (key === "Backspace") {
-            remove(cur.previousSibling)
-            return;
-        }
-        if (key === "Enter") {
-            insertBefore(cur, document.createElement('br'))
-            return;
-        }
-        if (key === '`') {
-            replace(cur, fromtemp('t-search'))
-            return;
-        }
-        if (key==='ArrowLeft') {
-            cur.previousElementSibling!==null && swap(cur.previousElementSibling,cur)
-            return;
-        }
-        if (key==='ArrowRight') {
-            cur.nextElementSibling!=null && swap(cur.nextElementSibling,cur)
-            return;
-        }
-        if (key==='Delete') {
-            cur.nextElementSibling!==null && cur.nextElementSibling.remove()
-            return;
-        }
-        if (key==="Control+Enter") {
-            replace(cur,fromtemp('t-cell'))
-            return;
-        }
-        if (key==="Control+Backspace" && isX(cur.parentElement)) {
-            replace(cur.parentElement,cur)
-            return;
-        }
-
-        insertBefore(cur,fromtemp('t-char',key))
-        cur.previousElementSibling.getElementsByTagName('*')
-            .$.forEach(el=>{
-                if (el.tagName.startsWith('X-SLOT-')) {
-                    replace(el,document.createTextNode(key))
-                }
-            })
-    });
-
-    class MoveableElement extends HTMLElement {
-        constructor() {
-            super();
-            var tag = this.tagName.toLowerCase().replace("x-","")
-            this.innerHTML=''
-            var that = this;
-
-            this.appendChild(fromtemp("t-"+tag))
-
-        }
-
-        connectedCallback() {
-
-        }
-
-        moveUp() {
-            const prevSibling = this.previousElementSibling;
-            if (prevSibling) {
-                this.parentNode.insertBefore(this, prevSibling);
-            }
-        }
-
-        moveDown() {
-            const nextSibling = this.nextElementSibling;
-            if (nextSibling) {
-                this.parentNode.insertBefore(nextSibling, this);
-            }
-        }
-    }
-
-    Array.from(document.querySelectorAll('*').values())
-        .filter(n=>n.tagName.startsWith("X-")).forEach(n=>{
-        console.log('register '+n.tagName)
-        customElements.define(n.tagName.toLowerCase(), MoveableElement)
-
-    })
-</script>
+<script type="module" src="main.js"></script>
 </body>
 
 </html>
