--- a/playground/js/VirtualizedDom/index.html
+++ b/playground/js/VirtualizedDom/index.html
@@ -12,21 +12,11 @@
 </head>
 
 <body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/cellx/2.0.1/cellx.umd.min.js"
-        integrity="sha512-+nTC8Kovhf6l2jN7iOVdf5FZfttYL7wWFkCCpTNjc+7VxK+EgHZYH1REadZliDe+Ps+uQWzOhwJItlKrPG/ENw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="cellx.js"></script>
 <script src="util.js"></script>
+<script src="experiment.js"></script>
 <div id="root"><x-cursor/></div>
-<template id="t-search">
-    <x-cell name="search">
-        <x-cursor/>
-    </x-cell>
-</template>
-<template id="t-table">
-    <x-table>
 
-    </x-table>
-</template>
 <script type="module" src="main.js"></script>
 
 </body>
