--- a/playground/js/VirtualizedDom/index.html
+++ b/playground/js/VirtualizedDom/index.html
@@ -8,15 +8,26 @@
     <style>
     </style>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridstack.js/11.1.0/gridstack.min.css"/>
 
 </head>
 
 <body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gridstack.js/11.1.0/gridstack-all.min.js"></script>
 <script src="cellx.js"></script>
 <script src="util.js"></script>
 <script src="experiment.js"></script>
-<div id="root"><x-cursor/></div>
 
+<div class="grid-stack gs-12 gs-id-0 grid-stack-animate" gs-current-row="1" style="height: 1ch;">
+    <div class="grid-stack-item ui-resizable-autohide" gs-x="0" gs-y="0" gs-w="10" gs-h="20">
+        <div class="grid-stack-item-content">
+            <div id="root">
+                <x-cursor/>
+            </div>
+        </div>
+        <div class="ui-resizable-handle ui-resizable-se" style="z-index: 100; user-select: none;"></div>
+    </div>
+</div>
 <script type="module" src="main.js"></script>
 
 </body>
