--- a/playground/js/VirtualizedDom/index.html
+++ b/playground/js/VirtualizedDom/index.html
@@ -13,21 +13,49 @@
 </head>
 
 <body>
+<x-dock x-dock="top">
+    <div style="background-color: red" contenteditable="true">hi</div>
+    <div style="background-color: blue; width: 100%; height: 100%;" contenteditable="true">there</div>
+
+</x-dock>
+<template>
+    <div style="display: table">
+    <div style="display: table-row; background-color: black">
+        <div class="grid-stack-item ui-resizable-autohide" gs-w="10" gs-h="1" >
+            <div class="grid-stack-item-content">
+                <button onclick="push()">+</button>
+            </div>
+            <div class="ui-resizable-handle ui-resizable-se" style="z-index: 200; user-select: none;"></div>
+        </div>
+    </div>
+    <div style="display: table-row;">
+        <div class="grid-stack gs-12 gs-id-0 grid-stack-animate"  >
+
+            <div class="grid-stack-item ui-resizable-autohide" gs-x="0" gs-y="0" gs-w="10" gs-h="20">
+                <div class="grid-stack-item-content">
+                    <div id="root">
+                        <x-cursor/>
+                    </div>
+                </div>
+                <div class="ui-resizable-handle ui-resizable-se" style="z-index: 100; user-select: none;"></div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+</template>
+
+
+
+
+<div class="grid-stack gs-12 gs-id-1 grid-stack-animate" gs-current-row="1">
+
+</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gridstack.js/11.1.0/gridstack-all.min.js"></script>
 <script src="cellx.js"></script>
 <script src="util.js"></script>
 <script src="experiment.js"></script>
-
-<div class="grid-stack gs-12 gs-id-0 grid-stack-animate" gs-current-row="1" style="height: 1ch;">
-    <div class="grid-stack-item ui-resizable-autohide" gs-x="0" gs-y="0" gs-w="10" gs-h="20">
-        <div class="grid-stack-item-content">
-            <div id="root">
-                <x-cursor/>
-            </div>
-        </div>
-        <div class="ui-resizable-handle ui-resizable-se" style="z-index: 100; user-select: none;"></div>
-    </div>
-</div>
 <script type="module" src="main.js"></script>
 
 </body>
