--- a/playground/js/VirtualizedDom/index.html
+++ b/playground/js/VirtualizedDom/index.html
@@ -9,14 +9,12 @@
     </style>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridstack.js/11.1.0/gridstack.min.css"/>
-
 </head>
 
 <body>
 <x-dock x-dock="top">
-    <div style="background-color: red" contenteditable="true">hi</div>
-    <div style="background-color: blue; width: 100%; height: 100%;" contenteditable="true">there</div>
-
+    <div style="background-color: red;" contenteditable="true">hi</div>
+    <div style="background-color: blue;" contenteditable="true">there</div>
 </x-dock>
 <template>
     <div style="display: table">
@@ -43,15 +41,11 @@
     </div>
 
 </div>
+    <div class="grid-stack gs-12 gs-id-1 grid-stack-animate" gs-current-row="1">
 
+    </div>
 </template>
 
-
-
-
-<div class="grid-stack gs-12 gs-id-1 grid-stack-animate" gs-current-row="1">
-
-</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gridstack.js/11.1.0/gridstack-all.min.js"></script>
 <script src="cellx.js"></script>
 <script src="util.js"></script>
