--- a/playground/js/VirtualizedGrid/index.html
+++ b/playground/js/VirtualizedGrid/index.html
@@ -11,6 +11,15 @@
             box-sizing: border-box;
             font-family: monospace, sans-serif;
         }
+        table, tr,td, tbody {
+            border-collapse: collapse;
+            margin: 0px;
+            padding: 0px;
+            overflow: hidden;
+        }
+        table {
+            border-spacing: 0;
+        }
         html, body {
             height: 100%;
             width: 100%;
