vertical offset grid

--- a/playground/js/paper/index.html
+++ b/playground/js/paper/index.html
@@ -28,6 +28,7 @@
 </head>
 <body>
 <canvas id="myCanvas" resize></canvas>
+<script src="https://cdn.jsdelivr.net/npm/pubsub-js@1.9.5/src/pubsub.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/paper@0.12.18/dist/paper-full.min.js"></script>
 <script src="util.js"></script>
 <script type="module" src="main.js"></script>
